feat: adiciona perfil de acesso e vinculo de regional ao usuario
Cria as colunas perfil e regional_id em users via V3, com backfill para COLABORADOR. Adiciona o enum Perfil e o claim perfil no JWT. Unifica a geracao de authority em Perfil.authority(), no formato ROLE_<PERFIL>, substituindo a string fixa USER que nascia em dois lugares. AuthResponse e UserResponse ganham campos aditivos. Acrescenta UserMapperTest, fechando a lacuna de cobertura do mapeamento. Suite passa de 52 para 60.