@@ -8,7 +8,9 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
+
+import static com.github.api_abastecefacil.constants.AuthConstants.USER_NOT_FOUND_BY_EMAIL_MESSAGE;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -22,12 +24,23 @@ public class CustomUserDetailsService implements UserDetailsService {
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
         User user = userRepository.findByEmail(email)
-                .orElseThrow(() -> new UsernameNotFoundException("Usuário não encontrado com email: " + email));
+                .orElseThrow(() -> new UsernameNotFoundException(USER_NOT_FOUND_BY_EMAIL_MESSAGE + email));
 
+        return toUserDetails(user);
+    }
+
+    /**
+     * Único ponto do projeto que constrói as authorities do Spring Security. A
+     * authority sai no formato {@code ROLE_<PERFIL>}, vindo de
+     * {@link com.github.api_abastecefacil.model.Perfil#authority()}, e por isso deve
+     * ser consumida por {@code hasRole("<PERFIL>")} — nunca por
+     * {@code hasAuthority("<PERFIL>")}, que exigiria o nome sem prefixo.
+     */
+    public UserDetails toUserDetails(User user) {
         return new org.springframework.security.core.userdetails.User(
                 user.getEmail(),
                 user.getPassword(),
-                Collections.singletonList(new SimpleGrantedAuthority("USER"))
+                List.of(new SimpleGrantedAuthority(user.getPerfil().authority()))
         );
     }
 }
